RESOLVED FIXED106512
[WK2][EFL] REGRESSION(r139189): MiniBrowser renders abnormally with -r option.
https://bugs.webkit.org/show_bug.cgi?id=106512
Summary [WK2][EFL] REGRESSION(r139189): MiniBrowser renders abnormally with -r option.
Dongseong Hwang
Reported 2013-01-09 17:42:23 PST
If running MiniBrowser with -r option to set deviceScaleFactor, MiniBrowser renders abnormally.
Attachments
Patch (11.89 KB, patch)
2013-01-09 17:58 PST, Dongseong Hwang
no flags
Patch (11.40 KB, patch)
2013-01-10 02:06 PST, Dongseong Hwang
no flags
Patch (11.44 KB, patch)
2013-01-10 20:18 PST, Dongseong Hwang
no flags
Patch (11.50 KB, patch)
2013-01-10 20:22 PST, Dongseong Hwang
no flags
Patch (11.52 KB, patch)
2013-01-10 20:34 PST, Dongseong Hwang
no flags
Patch (11.88 KB, patch)
2013-01-13 22:18 PST, Dongseong Hwang
no flags
Dongseong Hwang
Comment 1 2013-01-09 17:58:40 PST
Kenneth Rohde Christiansen
Comment 2 2013-01-09 19:11:22 PST
Comment on attachment 182034 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182034&action=review > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:203 > + void setContentsScaleFactor(float scaleFactor) { m_contentsScaleFactor = scaleFactor; } > + float contentsScaleFactor() const { return m_contentsScaleFactor; } isnt it better to separate it into two here? like it having page scale factor as well as device scale factor.
Dongseong Hwang
Comment 3 2013-01-10 02:06:55 PST
Dongseong Hwang
Comment 4 2013-01-10 02:16:24 PST
(In reply to comment #2) > (From update of attachment 182034 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=182034&action=review > > > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.h:203 > > + void setContentsScaleFactor(float scaleFactor) { m_contentsScaleFactor = scaleFactor; } > > + float contentsScaleFactor() const { return m_contentsScaleFactor; } > > isnt it better to separate it into two here? like it having page scale factor as well as device scale factor. The second patch changed from setContentsScaleFactor to setPageScaleFactor, and did not add setDeviceScaleFactor because it already exists. It means PageViewportControllerClientEFL uses EwkViewImpl API differently to the previous patch.
Kenneth Rohde Christiansen
Comment 5 2013-01-10 04:32:29 PST
Comment on attachment 182095 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182095&action=review > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:313 > - transform.scale(1 / m_scaleFactor); > + transform.scale(1 / effectiveScaleFactor()); I would prefer transform.scale(1 / m_pageScaleFactor) transform.scale(1 / deviceScaleFactor()) That is much more clear
Dongseong Hwang
Comment 6 2013-01-10 20:18:57 PST
Dongseong Hwang
Comment 7 2013-01-10 20:19:21 PST
(In reply to comment #5) > (From update of attachment 182095 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=182095&action=review > I would prefer > > transform.scale(1 / m_pageScaleFactor) > transform.scale(1 / deviceScaleFactor()) > > That is much more clear Yeah, done.
Dongseong Hwang
Comment 8 2013-01-10 20:22:54 PST
EFL EWS Bot
Comment 9 2013-01-10 20:29:26 PST
Dongseong Hwang
Comment 10 2013-01-10 20:34:26 PST
Kenneth Rohde Christiansen
Comment 11 2013-01-11 05:59:59 PST
Comment on attachment 182252 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=182252&action=review > Source/WebKit2/UIProcess/API/efl/EwkViewImpl.cpp:415 > - cairo_scale(graphicsContext.get(), m_scaleFactor, m_scaleFactor); > + cairo_scale(graphicsContext.get(), effectiveScaleFactor(), effectiveScaleFactor()); I would do the same here and get rid of that method
Dongseong Hwang
Comment 12 2013-01-13 22:18:46 PST
Dongseong Hwang
Comment 13 2013-01-13 22:19:25 PST
(In reply to comment #11) > I would do the same here and get rid of that method Done. I removed effectiveScaleFactor().
WebKit Review Bot
Comment 14 2013-01-14 15:14:40 PST
Comment on attachment 182508 [details] Patch Clearing flags on attachment: 182508 Committed r139675: <http://trac.webkit.org/changeset/139675>
WebKit Review Bot
Comment 15 2013-01-14 15:14:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.