[EFL] REGRESSION(r139189): MiniBrowser renders abnormally with -r option. https://bugs.webkit.org/show_bug.cgi?id=106512

Patch by Huang Dongsung <luxtella@company100.net> on 2013-01-14
Reviewed by Kenneth Rohde Christiansen.

PageViewportController handles only pageScaleFactor after r139189. So
PageViewportControllerClientEFL calls EwkView::setScaleFactor() with
pageScaleFactor instead of pageScaleFactor * deviceScaleFactor.

This patch makes EwkView handle pageScaleFactor.
1. EwkView uses pageScaleFactor * deviceScaleFactor when drawing in
the device unit.
2. EwkView uses pageScaleFactor when notifying the scale to
PageViewportController.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::EwkViewImpl):
(EwkViewImpl::deviceScaleFactor):
(EwkViewImpl::transformFromScene):
(EwkViewImpl::displayTimerFired):
* UIProcess/API/efl/EwkViewImpl.h:
(EwkViewImpl):
(EwkViewImpl::setPageScaleFactor):
(EwkViewImpl::pageScaleFactor):
* UIProcess/PageViewportController.cpp:
(WebKit::PageViewportController::didRenderFrame):
* UIProcess/PageViewportControllerClient.h:
(PageViewportControllerClient):
* UIProcess/efl/PageClientLegacyImpl.cpp:
(WebKit::PageClientLegacyImpl::updateViewportSize):
* UIProcess/efl/PageViewportControllerClientEfl.cpp:
(WebKit::PageViewportControllerClientEfl::setViewportPosition):
(WebKit::PageViewportControllerClientEfl::setPageScaleFactor):
(WebKit::PageViewportControllerClientEfl::didResumeContent):
* UIProcess/efl/PageViewportControllerClientEfl.h:
(PageViewportControllerClientEfl):
* UIProcess/qt/PageViewportControllerClientQt.cpp:
(WebKit::PageViewportControllerClientQt::setPageScaleFactor):
* UIProcess/qt/PageViewportControllerClientQt.h:
(PageViewportControllerClientQt):

Canonical link: https://commits.webkit.org/125063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139675 268f45cc-cd09-0410-ab3c-d52691b4dbfc