Source/WebKit2/UIProcess/efl/PageViewportControllerClientEfl.h
@@ -45,14 +45,13 @@ public:
 
     DrawingAreaProxy* drawingArea() const;
     WebCore::IntSize viewSize() { return m_viewportSize; }
-    float scaleFactor() const { return m_viewImpl->scaleFactor(); }
     WebCore::FloatPoint contentPosition() const { return m_contentPosition; }
 
     void updateViewportSize();
     void setRendererActive(bool);
 
     virtual void setViewportPosition(const WebCore::FloatPoint& contentsPoint);
-    virtual void setContentsScale(float);
+    virtual void setPageScaleFactor(float);
 
     virtual void didResumeContent();
     virtual void didChangeContentsSize(const WebCore::IntSize&);
